--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+# BattleCity Remastered
 This is a port/remake of an old online game I used to play based on the code here:
 
 https://github.com/Deceth/Battle-City
@@ -6,7 +7,7 @@ Very much a work in progress / hobby project
 
 Basic playable version of the client here:
 
-https://alanhollis.com/battlecity-js-remake/
+https://playbattlecity.com
 
 Arrow Keys move, Shift to shoot
 
